# financial-audit-env

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  GRPO_Training_Submission_Final.ipynb  HACKATHON_CORE_IDEA.md  HACKATHON_TESTING_TRAINING_PLAN.md  ITERATION_1_HANDOFF.md  README.md  TRAINING_QUICKSTART.md  debug_step.py  diff.txt  diff_utf8.txt  hf_jobs_train.py  inference.py  openenv.yaml  pyproject.toml  remotes.txt  remotes_utf8.txt  requirements-training.txt  requirements.txt  test_env.py  test_hf.py  test_http.py
.github/workflows/: ci.yml
financial_audit_env/: README.md  __init__.py  baseline.py  client.py  models.py  openenv.yaml  pyproject.toml
financial_audit_env/financial_audit_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
financial_audit_env/server/: Dockerfile  __init__.py  adversarial.py  app.py  campaign.py  data_generator.py  environment.py  graders.py  instructions.py  regulatory.py  requirements.txt  security.py  self_improve.py  tasks.py
scripts/: colab_bootstrap_and_train.sh  colab_campaign_smoke_test.sh  colab_train_low_vram.sh  hf_jobs_bootstrap_and_train.sh  run_hackathon_demo.py
server/: app.py
tests/: conftest.py  test_adversarial.py  test_campaign.py  test_campaign_round2.py  test_data_generators.py  test_environment.py  test_graders.py  test_regulatory.py  test_security.py  test_self_improve.py  test_training_pipeline.py
training/: GRPO_Training_Submission.ipynb  __init__.py  evaluator.py  reward.py  train_grpo.py
